# wedding-planner-saas

./: .env.example  CLAUDE.md  CLAUDE.original.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prisma.config.ts  proyecto-overview.md  roadmap.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260416120000_initial_schema.sql  20260416120001_seed_data.sql
backend/src/: error.rs  main.rs
backend/src/config/: mod.rs
backend/src/handlers/: clientes.rs  contratos.rs  eventos.rs  health.rs  mod.rs  odp.rs  paquetes.rs  planner.rs  presupuesto.rs  proveedores.rs  tareas.rs
backend/src/middleware/: auth.rs
backend/src/models/: cliente.rs  contrato.rs  evento.rs  mod.rs  odp.rs  paquete.rs  planner.rs  presupuesto.rs  proveedor.rs  tarea.rs
backend/src/services/: mod.rs
docs/: DEPLOY.md  app.js  competitive-analysis.md  index.html  styles.css
prisma/: schema.prisma  seed.ts
prisma/migrations/20260417061708_init/: migration.sql
prisma/migrations/20260417062000_enable_rls/: migration.sql
prisma/migrations/20260417102039_add_lead_estado_evento/: migration.sql
prisma/migrations/20260417102557_add_servicio_proveedor/: migration.sql
public/templates/: catalogo-ejemplo.csv
scripts/: check-user.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/app/(dashboard)/: layout.tsx
src/app/(portal-cliente)/: layout.tsx
src/data/: mock.ts
src/hooks/: useNavigation.ts
src/lib/: api-handler.ts  auth.ts  db-tenant.ts  nav-config.ts  prisma.ts  safe-auth.ts  toast.ts  validators.ts
src/types/: index.ts
(+100 files in other folders)
